Feature establishment contact (#5)
* feat: commit to save initial changes

* feat: add missing features
