# src/core/entities/establishmentContact.entity.ts
@@ -1,0 +1,8 @@
+export interface IEstablishmentContactEntity {
+  id: string;
+  phone_number?: string | null;
+  email?: string | null;
+  establishment_id: string;
+  created_at: Date;
+  updated_at: Date;
+}
